tests/paczka1/fuzzy1/74844473.err
Error in line 12: hd6c A257 27,46
Error in line 17: ?æ391
Error in line 15: OYmL S391 74,6
Error in line 21: sQ44 A411 49,0
Error in line 31: A556 A257 34,52
Error in line 33: OYmL A411 27,3
